--- a/index.html
+++ b/index.html
@@ -5,7 +5,41 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>U2-W3-D1</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
+<main>
+	<div class="container">
+		<div class="row mb-4">
+			<div class="col">
+				<h1>Insert pet details</h1>
+				<form id="petForm">
+					<div class="mb-3">
+						<label for="petName" class="form-label">Pet name</label>
+						<input type="text" class="form-control" id="petName" required>
+					</div>
+					<div class="mb-3">
+						<label for="ownerName" class="form-label">Owner name</label>
+						<input type="text" class="form-control" id="ownerName" required>
+					</div>
+					<div class="mb-3">
+						<label for="species" class="form-label">Species</label>
+						<input type="text" class="form-control" id="species" required>
+					</div>
+					<div class="mb-3">
+						<label for="breed" class="form-label">Breed</label>
+						<input type="text" class="form-control" id="breed" required>
+					</div>
+					<button class="btn btn-primary">Add</button>
+				</form>
+			</div>
+		</div>
+		<div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4" id="pets">
+
+		</div>
+	</div>
+</main>
 
 <body>
 
